[package]
name = "tweet-provider"
description = "Provides a WebSocket interface for pajbot1 to reduce Twitter API usage"
version = "0.1.2"
authors = ["Rasmus Karlsson <rasmus.karlsson@pajlada.com>", "Lucas Desgouilles <ldesgoui@ldesgoui.xyz>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/pajbot/tweet-provider"
keywords = ["pajbot", "twitter"]
categories = ["twitter", "application"]

[dependencies]
anyhow = "1.0.81"
async-stream = "0.3.5"
async-tungstenite = { version = "0.25.0",  features = ["tokio-runtime"] }
egg-mode = { version = "0.16.1", default-features = false, features = ["rustls"] }
futures = "0.3.30"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
simple_logger = "4.3.3"
clap = { version = "4.5.4", features = ["derive", "env"]}
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.11"

[dev-dependencies]
rstest = { version = "0.18.2", default-features = false }
trycmd = "0.15.0"
