[package]
name = "tweet-provider"
description = "Provides a WebSocket interface for pajbot1 to reduce Twitter API usage"
version = "0.1.2"
authors = ["Rasmus Karlsson <rasmus.karlsson@pajlada.com>", "Lucas Desgouilles <ldesgoui@ldesgoui.xyz>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/pajbot/tweet-provider"
keywords = ["pajbot", "twitter"]
categories = ["twitter", "application"]

[dependencies]
anyhow = "1.0.86"
async-stream = "0.3.5"
async-tungstenite = { version = "0.26.0",  features = ["tokio-runtime"] }
egg-mode = { version = "0.16.1", default-features = false, features = ["rustls"] }
futures = "0.3.30"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
simple_logger = "5.0.0"
clap = { version = "4.5.4", features = ["derive", "env"]}
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.13"

[dev-dependencies]
rstest = { version = "0.20.0", default-features = false }
trycmd = "0.15.4"
